# tw-experimentation

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  df_abn_experiment.csv  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: lint.yml  pre-commit-check.yml  pypi-publication.yml  (+2 more)
data/: experiment_dataset.pickle  test_config.json  test_data.csv
docs/: README.md
envs/: environment.yml  requirements-dev.txt  requirements.txt
lse_working_notebooks/: CUSUM and Ruptures Implementation.ipynb  CUSUMDetector Class.ipynb  CUSUM_Implementation.ipynb  SRM for Wise Data.ipynb  SRM_Class.ipynb  SRM_Test Class.ipynb
notebooks/: 1_pre_experiment.ipynb  2_integrity_checks + evaluation.ipynb  2a_evaluation_bayesian.ipynb  4T_delta_method.ipynb  4_ratio_metrics.ipynb  README.md  ratio.csv
seektable/: .env  docker-compose.pivotdataservice.env  docker-compose.seektable.env  docker-compose.yml
tests/: test_bayes_in_notebook.py  test_bayestest.py  test_datasets.py  test_experiment_design.py  test_frequentist_hypothesis_tests.py  test_frequentist_static.py  test_generate_output.py  test_integrity_checks_in_notebook.py  test_numpyro_sampler_model.py  test_sample_size_calculator.py
tw_experimentation/: checker.py  constants.py  data_generation.py  result_generator.py  segmentation_frequentist.py  setuper.py  snowflake_config.py  statistical_tests.py  synthetic_data.py  tester.py  utils.py  utils_ratio.py  widgetizer.py
tw_experimentation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+44 files in other folders)
